--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+	<div id="div1">
+		<ul>
+			<li>Song 1</li>
+			<li>Song 2</li>
+			<li>Song 3</li>
+			<li>Song 4</li>
+			<li>Song 5</li>
+		</ul>
+	</div>
+	<h2>Now Playing...</h2>
+	
+	<div id="div2">
+		<video class="player_one" src="https://www.w3schools.com/tags/movie.mp4
+" type="video" controls></video>
+		<h2>MP3 songs</h2>
+		<a href="#">Maan Meri jaan</a>
+		<br>
+		<audio class="player_two" src="https://www.w3schools.com/tags/movie.mp4
+" controls></audio>
+	</div>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
