--- a/main.html
+++ b/main.html
@@ -21,10 +21,12 @@
 	<h2>Now Playing...</h2>
 	
 	<div id="div2">
-		<video class="player_one" src="https://www.w3schools.com/tags/movie.mp4
-" type="video" controls></video>
+		<video class="player_one" controls>
+			<source  src="https://www.w3schools.com/tags/movie.mp4
+" type="video/mp4">
+		</video>
 		<h2>MP3 songs</h2>
-		<a href="#">Maan Meri jaan</a>
+		<a href="_blank">Maan Meri jaan</a>
 		<br>
 		<audio class="player_two" src="https://www.w3schools.com/tags/movie.mp4
 " controls></audio>
