--- a/main.html
+++ b/main.html
@@ -11,11 +11,12 @@
 	<h1>My Playlist</h1>
 	<div id="div1">
 		<ul>
-			<li>Song 1</li>
-			<li>Song 2</li>
-			<li>Song 3</li>
-			<li>Song 4</li>
-			<li>Song 5</li>
+			<li><a  href="#" target="_blank">Song 1</a></li>
+			<li><a  href="#" target="_blank">Song 2</a></li>
+			<li><a  href="#" target="_blank">Song 3</a></li>
+			<li><a href="#" target="_blank">Song 4</a></li>
+			<li><a  href="#" target="_blank">Song 5</a></li>
+
 		</ul>
 	</div>
 	<h2>Now Playing...</h2>
@@ -26,7 +27,7 @@
 " type="video/mp4">
 		</video>
 		<h2>MP3 songs</h2>
-		<a href="_blank">Maan Meri jaan</a>
+		<p>Maan Meri Jaan</p>
 		<br>
 		<audio class="player_two" src="https://www.w3schools.com/tags/movie.mp4
 " controls></audio>
