--- a/main.html
+++ b/main.html
@@ -29,8 +29,9 @@
 		<h2>MP3 songs</h2>
 		<p>Maan Meri Jaan</p>
 		<br>
-		<audio class="player_two" src="https://www.w3schools.com/tags/movie.mp4
-" controls></audio>
+		<audio class="player_two" controls>
+    <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+</audio>
 	</div>
 	
 	
